# sqlx-template

./: .gitignore  Cargo.toml  README.md
docs/: builder_pattern.md  handling_null_values.md
examples/mysql/: Cargo.toml
examples/mysql/sql/: init.sql
examples/mysql/src/: lib.rs  main.rs  test_null_handling.rs
examples/postgres/: Cargo.toml
examples/postgres/sql/: init.sql
examples/postgres/src/: lib.rs  main.rs  test_count_query.rs  test_null_handling.rs
examples/sqlite/: Cargo.toml  lib.rs
examples/sqlite/sql/: init.sql
examples/sqlite/src/: builder.rs  builder_example.rs  builder_expanded.rs  lib.rs  main.rs  test_null_handling.rs
src/: columns.rs  lib.rs  parser.rs  util.rs
src/sqlx_template/: delete.rs  insert.rs  mod.rs  proc.rs  query.rs  raw.rs  select.rs  update.rs  upsert.rs
src/sqlx_template/builder/: macro_impl.rs  mod.rs
src/sqlx_template/ddl/: mod.rs  postgres.rs
tests/: comprehensive_builder_test.rs  debug_custom_condition.rs  minimal_macro_test.rs  performance_comparison.rs  placeholder_operations_sqlite.rs  simple_builder_test.rs  test_all_builders.rs  test_all_builders_placeholder.rs  test_all_templates_docs.rs  test_column_mapping.rs  test_complex_expressions.rs  test_complex_type.rs  test_custom_conditions.rs  test_custom_conditions_placeholder.rs  test_delete_builder.rs  test_documentation.rs  test_invalid_type.rs  test_null_value_handling.rs  test_one_condition.rs  test_placeholder_generation.rs  test_placeholder_mapping.rs  test_table_alias_validation.rs  test_type_validation.rs  test_unsupported_type.rs  test_update_builder.rs  test_valid_types.rs
