[package]
name = "sqlx-template"
version = "0.1.0"
edition = "2021"
authors = ["hg <hn63wospuvy@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hn63wospuvy/sqlx-template"
keywords = ["sqlx", "template", "database", "postgres", "mysql", "sqlite"]
categories = ["database", "template"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
#syn = "2.0.43"
quote = "1.0.33"
proc-macro2 = "1.0"
sqlparser = "0.47.0"
sqlformat = "0.2.4"
rust-format = "0.3"
once_cell = "1.18"
[features]
default = ["postgres"]
postgres = []
mysql = []
sqlite = []
any = []
log = []
tracing = []