[workspace]
members = [
    ".", "examples/postgres", "examples/sqlite", "examples/mysql"
]


[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/hn63wospuvy/sqlx-template"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
authors = ["hg <hn63wospuvy@gmail.com>"]

[package]
name = "sqlx-template"
readme = "README.md"
documentation = "https://docs.rs/sqlx-template"
description = "Template query library for Rust SQLx "
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
#syn = "2.0.43"
quote = "1.0.33"
proc-macro2 = "1.0"
sqlparser = "0.47.0"
sqlformat = "0.2.4"
rust-format = "0.3"
once_cell = "1.18"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres", "macros", "uuid", "chrono"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }




[features]
log = []
tracing = []


