[package]
name = "mysql"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "mysql-example"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx-template = { path = "../../"}
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "macros", "uuid", "chrono"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["mysql"] }
