[package]
name = "sqlite"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "sqlite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx-template = { path = "../../"}
structopt = "0.3"
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "macros", "uuid", "chrono"] }
futures-util = "0.3"